--- a/src/App.sass
+++ b/src/App.sass
@@ -1,7 +1,7 @@
 .header
     color: #fff
     height: 70vh
-    background-image: url(https://blog.yakaboo.ua/wp-content/uploads/2016/04/100_books1-792x509.jpg) 
+    background-image: url("img/img.jpg") 
     background-repeat: no-repeat
     background-size: cover
     background-position: center center
